<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/warpcontent"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/buttonTable"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:stretchColumns="*" >

        <TableRow>

            <TextView
                android:id="@+id/resultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="5"
                android:gravity="end"
                android:padding="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/number7" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/number8" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/number9" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/divide" />

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/clear" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/number4" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/number5" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/number6" />

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/multiply" />

            <Button
                android:id="@+id/buttonBackSpace"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/backspace" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/number1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/number2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/number3" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/plus" />

            <Button
                android:id="@+id/buttonNegSign"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/negSign" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_span="2"
                android:text="@string/number0" />

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/dot" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/minus" />

            <Button
                android:id="@+id/buttonEval"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/eval" />
        </TableRow>
    </TableLayout>

</LinearLayout>